// Vitest Snapshot v1

exports[`Adsense > should allow children 1`] = `
<ins
  class="adsbygoogle ads-class"
  data-ad-client="123"
  data-ad-format="auto"
  data-ad-layout=""
  data-ad-layout-key=""
  data-ad-slot="abc"
  data-full-width-responsive="false"
  style="display: block;"
>
  <img
    alt="placeholder"
  />
</ins>
`;

exports[`Adsense > should be instantiable 1`] = `
<ins
  class="adsbygoogle ads-class"
  data-ad-client="123"
  data-ad-format="auto"
  data-ad-layout=""
  data-ad-layout-key=""
  data-ad-slot="abc"
  data-full-width-responsive="false"
  style="display: block;"
/>
`;
